--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.12",
     "@types/supertest": "^2.0.12",
